Fixed wordsleft alignment

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 #wordsleft {
-    float: left;
+
 }
 
 #wordlengths {
